# temperature2100

./: BACKEND_SETUP.md  package-lock.json  package.json  pyproject.toml
api/: index.py
app/: globals.css  layout.tsx  page.tsx
app/_features/about/: AboutModal.tsx
app/_features/comparison/: CoastalImpacts.tsx  ComparisonCharts.tsx  ComparisonHero.tsx  ComparisonInterpretation.tsx  ComparisonSummary.tsx  CredibilitySection.tsx  DataSourcesSection.tsx  EcosystemImpacts.tsx  ExportReportButton.tsx  FoodAgricultureImpacts.tsx  HowItWorks.tsx  PossibleImpacts.tsx  ScenarioControls.tsx  api.ts  helpers.ts  report.ts  types.ts
app/api/compare/: route.ts
app/api/health/: route.ts
app/api/simulate/: route.ts
public/: coastal_context_reference.json  coastal_projection_local.json  heat_impact_summary.json  model_data.json
python-vercel-api/: pyproject.toml  requirements.txt
python-vercel-api/api/: index.py
python-vercel-api/backend/app/: __init__.py  data_pipeline.py  main.py  train_models.py
python-vercel-api/backend/models/: arima_model.pkl
python-vercel-api/backend/preprocessed_data/: short_term_climate_data.csv
python_backend/app/: data_pipeline.py  main.py  train_models.py
python_backend/models/: mlr_model.joblib
python_backend/preprocessed_data/: long_term_climate_data.csv
