[project]
name = "climate-scenario-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.135.3",
    "joblib==1.5.3",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "scikit-learn==1.8.0",
    "statsmodels==0.14.6",
    "uvicorn==0.38.0",
]

[project.scripts]
app = "backend.app.main:app"
